fix(asset): align

--- a/src/pages/Address/rgbppAssets.module.scss
+++ b/src/pages/Address/rgbppAssets.module.scss
@@ -143,7 +143,7 @@
 
   .itemContentContainer {
     display: flex;
-    gap: 32px;
+    gap: 16px;
     flex-wrap: wrap;
 
     .itemContent {
